# python-course-platform

./: .dockerignore  .env.local  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  docker-compose.main.yml  docker-compose.yml  pyproject.toml  sandbox-requirements.txt  start-django.sh  tailwind.config.js
src/: manage.py  students_python_2025.csv
src/assignments/: admin.py  models.py  tasks.py  urls.py  views.py
src/assignments/migrations/: 0001_initial.py  0002_assignment_test_runner.py  0003_chapter_book_url.py  0004_assignment_difficulty_assignment_points.py  0005_assignment_solution.py  0006_assignment_publish_at_alter_assignment_difficulty.py  0007_assignment_status.py  0008_chapter_status.py  0009_assignment_publish_until.py  (+2 more)
src/grader/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
src/project/: asgi.py  celery.py  urls.py  wsgi.py
src/site_data/: admin.py  apps.py  context_processors.py  models.py  signals.py  views.py
src/users/: admin.py  managers.py  models.py  signals.py  tests.py
static/css/: output.css
tailwindcss/: input.css  output.css
templates/: base.html  home.html
templates/account/: confirm_email_verification_code.html  email_confirm.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  verification_sent.html  verified_email_required.html
templates/assignments/: assignment_detail.html  chapter_assignments.html  chapter_list.html
templates/grader/: _run_result.html
(+18 files in other folders)
